--- a/wakeupnow.html
+++ b/wakeupnow.html
@@ -6,7 +6,7 @@
 <script>
 setTimeout(wakeUpUser, 5000);
 function wakeUpUser() {
-alert("Are you going to stare at this boring page forever?");
+alert("Are you going to keep staring at this boring page forever?");
 }
 </script>
 </head>
